# pr402

./: .env.example  .gitignore  .vercelignore  =  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  env.template  rust-toolchain.toml  vercel.json
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: register-oracle.md
.github/workflows/: build-and-deploy.yml  discovery-indexer-cron.yml  settlement-keeper-cron.yml
deploy/settlement-keeper/: Dockerfile  README.md
discovery-indexer/: index.mjs  package.json
docs/: AGENT_INTEGRATION.md  CRON_OPERATIONS.md  Code Review — pr402 vs on-chain programs (2026-04-23).md  DISCOVERY.md  DISCOVERY_CODE_REVIEW.md  OPS_RECOVERY_PLAYBOOK.md  PAYTO_ZOOM_IN.md  README.md  SELLER_GO_LIVE_CHECKLIST.md  SELLER_INTEGRATION.md  SLA_ESCROW_FEE_PAYER_AND_SETTLE.md  SLA_ESCROW_FULLCYCLE_ROADMAP.md  SRM.md  facilitator_audit_status.md  sla_escrow_fee_payer_and_settle.md  sla_escrow_fullcycle_roadmap.md
docs-site/: agent-integration.md  api-reference.md  connect-cursor-to-pr402.md  discovery.md  index.md  onboarding_guide.md  package-lock.json  package.json  pr402-vs-alternatives.md  quickstart-buyer.md  quickstart-seller.md  seller-lab.md  seller-quick-start.md  start-here.md  vercel.json
docs-site/.vitepress/: config.mts
docs-site/.vitepress/theme/: FloatingSupport.vue  Layout.vue  custom.css  index.ts
examples/: agent_settlement_demo.ts  e2e_sign_exact_tx.rs  e2e_sign_onboard_raw.rs  e2e_sign_sla_escrow_tx.rs
migrations/: 001_escrow_support.sql  002_escrow_details_one_per_payment.sql  003_escrow_lifecycle_events.sql  005_add_sweep_threshold.sql  006_resource_provider_discovery.sql  007_escrow_payment_uid.sql  008_payable_resources.sql  init.sql  resource_providers_dedup.sql
public/: agent-integration.md  agent-payTo-semantics.json  agent-tools.json  index.html  onboarding_guide.md  openapi.json  quickstart-buyer.md  quickstart-seller.md  seller-endpoint-guide.json  seller-quick-start.md  sitemap.xml  wallet.js  wallet.js.LICENSE.txt  x402-resources.schema.json
public/resources/: index.html
scripts/: agent_sim.py  agentic-simulation.sh  sync-agent-integration-doc.sh  verify-audit-persistence.sh
scripts/e2e/: 01_sla_escrow_facilitator_verify.sh  02_exact_facilitator_verify.sh  03_sla_escrow_http_facilitator_fees.sh  04_sla_escrow_post_fund_lifecycle.sh  05_sla_escrow_full_cycle_devnet.sh  06_seller_provision_devnet.sh  README.md  common.sh  run_all_devnet.sh
sdk/: README.md  facilitator-build-tx.ts
sdk/discovery/: README.md  package-lock.json  package.json  tsconfig.json
sdk/discovery/src/: index.ts
sdk/mcp/: CHANGELOG.md  README.md  package-lock.json  package.json
sdk/mcp/src/: config.ts  register-tool.ts  schemas.ts  server.ts
sdk/mcp/src/resources/: index.ts
sdk/mcp/src/tools/: buyer.ts  discovery.ts  seller.ts
sdk/rust/: Cargo.toml  README.md
sdk/rust/src/: lib.rs  main.rs
sdk/ts/: CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
sdk/ts/src/: cli.ts  index.ts
src/: agent_integration.md  config.rs  exact_payment_build.rs  facilitator.rs  lib.rs  onboard_auth.rs  oracle_health.rs  parameters.rs  payable_resource.rs  payment_attempt.rs  refund_tx_build.rs  registration_notify.rs  resource_probe.rs  seller_provision.rs  sla_escrow_payment_build.rs  sla_escrow_ttl.rs  vault_balance.rs
src/chain/: chain_id.rs  mod.rs  solana.rs  solana_sla_escrow.rs  solana_universalsettle.rs  tx_budget.rs
src/db/: mod.rs
src/proto/: mod.rs  util.rs  v2.rs
src/scheme/: mod.rs
src/scheme/v2_solana_escrow/: mod.rs  types.rs
src/scheme/v2_solana_exact/: mod.rs  shared.rs  types.rs
src/sdk/: http.rs  mod.rs
src/settlement_keeper/: close.rs  config.rs  mod.rs  payment.rs  sla_escrow.rs  types.rs  vault_sweep.rs
src/settlement_keeper/sources/: chain_scan.rs  mod.rs  pr402_db.rs
src/util/: b64.rs  mod.rs  tx_bincode.rs  tx_builder.rs  x402_wire_scheme.rs
tests/: golden_tests.rs  verify_request_wire_normalize.rs
wallet-adapter/: package-lock.json  package.json  webpack.config.js
wallet-adapter/src/: main.js  styles.css
