[package]
name = "pr402"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "The lightweight, serverless x402 facilitator for the Solana Agentic Economy."
repository = "https://github.com/miraland-labs/pr402"
keywords = ["x402", "solana", "payments", "serverless", "vercel"]
categories = ["cryptography", "finance", "stablecoins"]

[dependencies]
# Vercel Runtime
vercel_runtime = "1.1.4"
http = "1"

# Async runtime
tokio = { version = "1.45", features = ["full", "rt-multi-thread"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Solana SDK
solana-compute-budget-interface = "3.0"
solana-pubkey = "4.0"
solana-signature = { version = "3.1", features = ["verify"] }
solana-transaction = "3.0"
solana-signer = "3.0"
solana-account = "3.2"
solana-message = "3.0"
solana-keypair = "3.1"
solana-commitment-config = "3.1"
spl-token = { version = "9.0", features = ["no-entrypoint"] }
# Token-2022: use `spl_token::instruction::TokenInstruction` + `TOKEN_2022_PROGRAM_ID` in `chain::solana`
# (`spl-token-2022` 10.0.0 does not compile on crates.io as of 2025-11).
solana-client = "3.1"
bs58 = "0.5"
# universalsettle-api = { path = "../universalsettle/api" }
# sla-escrow-api = { path = "../sla-escrow/api" }
universalsettle-api = "0.1.1"
sla-escrow-api = "0.2.5"

# Base64 encoding
base64 = "0.22"

# Bincode for Solana transaction serialization
bincode = "1.3"

# Payment-attempt ids (verify → settle merge key when client omits correlationId)
ulid = "1.1"

# Async trait
async-trait = "0.1"

# Futures utilities
futures-util = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# URL parsing
url = { version = "2.5", features = ["serde"] }

# Optional PostgreSQL: deadpool + openssl — same stack as signer-payer-serverless-copy/signer-payer/src/database.rs
deadpool-postgres = { version = "0.14", features = ["serde"] }
tokio-postgres = "0.7"
postgres-openssl = "0.5"
openssl = "0.10"

# Signed onboard challenge (HMAC binds server-issued fields; wallet signs the message)
hmac = "0.12"
sha2 = "0.10"
subtle = "2.6"
getrandom = "0.3.4"

[profile.release]
opt-level = "z"   # Optimize for size
lto = true        # Link-time optimization
codegen-units = 1 # Better optimization
strip = true      # Strip symbols

[[bin]]
name = "facilitator"
path = "src/bin/facilitator.rs"
