[package]
name = "pr402"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "The lightweight, serverless x402 facilitator for the Solana Agentic Economy."
repository = "https://github.com/miralandlabs/pr402.git"
keywords = ["x402", "solana", "payments", "serverless", "vercel"]
categories = ["cryptography", "finance", "stablecoins"]

[features]
default = []
## Optional `reqwest` client (`sdk::http`); release `facilitator` binary size unchanged with/without—entrypoint never uses it, LTO strips `reqwest`.
facilitator-http = ["dep:reqwest"]

[dependencies]
# Vercel Runtime
vercel_runtime = "1.1.4"
http = "1"

# Async runtime
tokio = { version = "1.45", features = ["full", "rt-multi-thread"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }

# Solana SDK
solana-compute-budget-interface = "3.0"
solana-pubkey = { version = "4.0", features = ["serde"] }
solana-signature = { version = "3.1", features = ["verify"] }
solana-transaction = "3.0"
solana-signer = "3.0"
solana-account = "3.2"
solana-message = "3.0"
solana-keypair = "3.1"
solana-commitment-config = "3.1"
spl-token = { version = "9.0", features = ["no-entrypoint"] }
# Token-2022: use `spl_token::instruction::TokenInstruction` + `TOKEN_2022_PROGRAM_ID` in `chain::solana`
# (`spl-token-2022` 10.0.0 does not compile on crates.io as of 2025-11).
solana-client = "3.1"
bs58 = "0.5"
universalsettle-api = "0.1.7"
sla-escrow-api = "0.2.8"
bytemuck = "1.16"

# Base64 encoding
base64 = "0.22"

# Bincode for Solana transaction serialization
bincode = "1.3"

# Payment-attempt ids (verify → settle merge key when client omits correlationId)
ulid = "1.1"

# Async trait
async-trait = "0.1"

# Futures utilities
futures-util = "0.3"

# Logging (mirror signer-payer `init_tracing`: tracing-log + tracing-subscriber env-filter)
tracing = "0.1"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# URL parsing
url = { version = "2.5", features = ["serde"] }

# Optional: facilitator HTTPS client (`facilitator-http` feature)
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
], optional = true }

# Optional PostgreSQL: deadpool + openssl — same stack as signer-payer-serverless-copy/signer-payer/src/database.rs
deadpool-postgres = { version = "0.14", features = ["serde"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
postgres-openssl = "0.5"
openssl = "0.10"

# Signed onboard challenge (HMAC binds server-issued fields; wallet signs the message)
hmac = "0.12"
sha2 = "0.10"
subtle = "2.6"
getrandom = "0.3.4"

[dev-dependencies]
solana-hash = "3.0"

[[example]]
name = "e2e_sign_exact_tx"
path = "examples/e2e_sign_exact_tx.rs"

[[example]]
name = "e2e_sign_sla_escrow_tx"
path = "examples/e2e_sign_sla_escrow_tx.rs"

[profile.release]
opt-level = "z"   # Optimize for size
lto = true        # Link-time optimization
codegen-units = 1 # Better optimization
strip = true      # Strip symbols

[[bin]]
name = "facilitator"
path = "src/bin/facilitator.rs"

[[bin]]
name = "record_escrow_lifecycle"
path = "src/bin/record_escrow_lifecycle.rs"
