[package]
name = "pr402-client"
version = "0.1.0"
edition = "2021"
description = "Lightweight SDK for AI Agents to automatically discover, build, sign, and settle x402 402 API requests"
license = "Proprietary"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-sdk = "^2.1"
anyhow = "1.0"
base64 = "0.22"
bincode = "1.3"
